[package]
name = "vortex"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A distributed systems library for Maelstrom with Raft consensus"
repository = "https://github.com/Lawqup/vortex"
keywords = ["distributed-systems", "fly.io", "maelstrom", "raft"]
readme = "README.org"
exclude = [
    "src/bin",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
ulid = "1.1.0"
